--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
   <head>
     <meta charset="UTF-8" />
     <title>WebSpeakerJs - Text to Speech Example</title>
